src/objects/Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The custom setting object to hold all TMG Application static settings</description>
    <fields>
        <fullName>Core_Api_App_Id_Value__c</fullName>
        <label>Core Api App Id Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Api_App_Id__c</fullName>
        <label>Core Api App Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Api_App_Key_Value__c</fullName>
        <label>Core Api App Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Api_App_Key__c</fullName>
        <label>Core Api App Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Collection_Outcome__c</fullName>
        <label>Debt Collection Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Voucher_Cheque_Refund_Report_Id__c</fullName>
        <description>Voucher Activity Holiday Return Cheque Refunds Report Id. Requires 15 characters report id.</description>
        <inlineHelpText>Voucher Activity Holiday Return Cheque Refunds Report Id. Requires 15 characters report id.</inlineHelpText>
        <label>Holiday Voucher Cheque Refund Report Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPP_Refund_Email_Template_Name__c</fullName>
        <description>API name of email template used for MPP refund notification in holiday return voucher activities functionality.</description>
        <inlineHelpText>API name of email template used for MPP refund notification in holiday return voucher activities functionality.</inlineHelpText>
        <label>MPP Refund Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_DDCXBatch_Subscription_End_Date_From__c</fullName>
        <defaultValue>-10</defaultValue>
        <description>This field is used to set date interval for Subscription Cancellation Date. Please enter integer to specify interval start date which is calculated from today&apos;s date. This custom setting is used in OutboundCallingDDCXBatch class query.</description>
        <inlineHelpText>This field is used to set date interval for Subscription Cancellation Date. Please enter integer to specify interval start date which is calculated from today&apos;s date. This custom setting is used in OutboundCallingDDCXBatch class query.</inlineHelpText>
        <label>OC DDCXBatch Subscription End Date From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OC_DDCXBatch_Subscription_End_Date_To__c</fullName>
        <defaultValue>50</defaultValue>
        <description>This field is used to set date interval for Subscription Cancellation Date. Please enter integer to specify interval end date which is calculated from today&apos;s date. This custom setting is used in OutboundCallingDDCXBatch class query.</description>
        <inlineHelpText>This field is used to set date interval for Subscription Cancellation Date. Please enter integer to specify interval end date which is calculated from today&apos;s date. This custom setting is used in OutboundCallingDDCXBatch class query.</inlineHelpText>
        <label>OC DDCXBatch Subscription End Date To</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_URL__c</fullName>
        <label>Privacy Policy URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_Base_Url__c</fullName>
        <description>The url address used to redirect to the pages that are using Zuora visual force components. This setting can be inserted/updated by calling DefaultSettings.ORG_LEVEL_CONFIGURATION</description>
        <inlineHelpText>The url address used to redirect to the pages that are using Zuora visual force components. This setting can be inserted/updated by calling DefaultSettings.ORG_LEVEL_CONFIGURATION</inlineHelpText>
        <label>Visualforce Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherRefundGoLiveDate__c</fullName>
        <description>Date TMG went live with new voucher refund functionality.. the value here is used in bypassing validations for old rules.</description>
        <label>Voucher Refund Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Refund_Threshold_Amount__c</fullName>
        <description>Custom setting to hold Voucher Refund Thresholds. Used for refund of holiday voucher on Voucher Adjustment record</description>
        <inlineHelpText>Custom setting to hold Voucher Refund Thresholds. Used for refund of holiday voucher on Voucher Adjustment record</inlineHelpText>
        <label>Voucher Refund Threshold Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Application Configurations</label>
</CustomObject>